<resources>
    <string name="app_name">GracianIM_U2</string>
    <string name="asteroides">Asteroides</string>
    <string name="constraintlayout">Constraint Layout</string>
    <string name="bot_n_personalizado">Botón Personalizado</string>
    <string name="calculadora">Calculadora</string>
    <string name="arrancar">Jugar</string>
    <string name="action_settings">Configurar</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="tituloaplicacion">tituloAplicacion</string>
    <string name="hola">Hola</string>
    <string name="textview">Vista de texto</string>
    <string name="una_imagen_android">Una imagen Android</string>
    <string name="img_android1">Imagen Android 1</string>
    <string name="img_android2">Imagen Android 2</string>
    <string name="img_android3">Imagen Android 3</string>
    <string name="intro_num">Introduce un número.</string>
    <string name="cero">0</string>
    <string name="resultado">Resultado</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_plus">+</string>
    <string name="_equal">=</string>
    <string name="_c">C</string>
    <string name="cantidad">Cantidad:</string>
    <string name="resultado2">Resultado:</string>
    <string name="eu_pta">€>>Pta.</string>
    <string name="ptas_eu">Pta>>€</string>
    <string name="ptas">Ptas.</string>
    <string name="euros">€.</string>
    <string name="num_invalido">¡Introduce un numero!</string>
    <string name="son">son</string>
</resources>
