<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/TemaCalculadora"
    android:padding="@dimen/padding_calculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salida"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/beuropesetas"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/eu_pta"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/bpesetaseuro"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/bpesetaseuro"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/ptas_eu"
            app:layout_constraintLeft_toRightOf="@+id/beuropesetas"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />

        <Button
            android:id="@+id/bplus"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_plus"
            app:layout_constraintBottom_toTopOf="@+id/bequal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bpesetaseuro"
            app:layout_constraintLeft_toRightOf="@+id/b3"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/bequal"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_equal"
            app:layout_constraintBottom_toTopOf="@+id/bc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bplus"
            app:layout_constraintLeft_toRightOf="@+id/b9"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/bc"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:text="@string/_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bequal"
            app:layout_constraintLeft_toRightOf="@+id/b9"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" />

        <Button
            android:id="@+id/b1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beuropesetas" />

        <Button
            android:id="@+id/b2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_2"
            app:layout_constraintLeft_toRightOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/beuropesetas"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_3"
            app:layout_constraintLeft_toRightOf="@+id/b2"
            app:layout_constraintTop_toBottomOf="@+id/bpesetaseuro"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1" />

        <Button
            android:id="@+id/b5"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_5"
            app:layout_constraintLeft_toRightOf="@+id/b4"
            app:layout_constraintTop_toBottomOf="@+id/b2"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_6"
            app:layout_constraintLeft_toRightOf="@+id/b5"
            app:layout_constraintTop_toBottomOf="@+id/b3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b7"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b4" />

        <Button
            android:id="@+id/b8"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_8"
            app:layout_constraintLeft_toRightOf="@+id/b7"
            app:layout_constraintTop_toBottomOf="@+id/b5"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_9"
            app:layout_constraintLeft_toRightOf="@+id/b8"
            app:layout_constraintTop_toBottomOf="@+id/b6"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/b0"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b8"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintRight_toLeftOf="@+id/bc"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/salida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/resultado"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textColor="#0000FF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/moneda"
        app:layout_constraintTop_toBottomOf="@+id/TVCantidad"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/entrada"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/TVCantidad"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/TVCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cantidad"
        android:textColor="#111144"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/entrada"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textColor="#0000FF"
        app:layout_constraintLeft_toRightOf="@+id/salida"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVCantidad" />

</android.support.constraint.ConstraintLayout>